Zoom fixes! * Added zoom and item zoom to Graph View * Fixed zoom centre point in both views * Added zoom control to top right * Added easing on scrollwheel zoom
Fixed bug with Accordion menu overflowing at the bottom
Implemented search/word wheel filtering
Completed ViewerState implementation

--- a/style/pivotviewer.css
+++ b/style/pivotviewer.css
@@ -6,35 +6,39 @@
 .pv-toolbarpanel-brandimage { height: 22px; float:left; }
 .pv-toolbarpanel-name { float:left; margin-top:5px; margin-left:4px; color:#05314A; }
 .pv-toolbarpanel-zoomcontrols { float: right; width:146px; height:20px; margin-right:4px; border: 1px solid #D3D4D4; }
+.pv-toolbarpanel-zoomslider { margin: 6px 10px 0px 10px; }
 .pv-toolbarpanel-viewcontrols { float: right; margin-right:5px; height:20px; }
 .pv-toolbarpanel-view { height:20px; border:1px solid #D3D4D4; float:left; cursor:pointer; }
-.pv-toolbarpanel-sortcontrols { float: right; margin-right:5px; border: 1px solid #D3D4D4; }
+.pv-toolbarpanel-sortcontrols { float: right; margin-right:5px; }
 .pv-toolbarpanel-sort { width: 90px; }
 .pv-mainpanel { height:659px; }
 .pv-filterpanel { position:absolute; z-index:30; margin-left:5px; margin-top:5px; width: 183px; padding: 0px 3px 0px 3px; background:#FEFEFE; border: 1px solid #C5C5C5; -moz-border-radius: 3px; border-radius: 3px; -moz-box-shadow: 0 0 2px 2px #D7D9DA; -webkit-box-shadow: 0 0 2px 2px #D7D9DA; box-shadow: 0 0 2px 2px #D7D9DA; }
-.pv-filterpanel-clearall { width:56px; margin-top: 3px; padding: 4px 4px 4px 4px; float:right; cursor:pointer; color:#97A8B2; background-image: url('../Content/images/FilterPanelClear.png'); background-position	: right center; background-repeat: no-repeat; visibility::hidden; }
+.pv-filterpanel-clearall { width:56px; margin-top: 3px; padding: 4px 4px 4px 4px; float:right; cursor:pointer; color:#97A8B2; background-image: url('../media/FilterPanelClear.png'); background-position	: right center; background-repeat: no-repeat; visibility::hidden; }
 .pv-filterpanel-clearall:hover { background-color:#CBE4F0; }
-.pv-filterpanel-search { margin-top: 9px; margin-bottom:6px; height:24px; border:1px solid #E2E2E2; }
+.pv-filterpanel-search { margin-top: 9px; margin-bottom:0px; height:24px; border:1px solid #E2E2E2; }
 .pv-filterpanel-search::-webkit-input-placeholder { color:#787676; font-style:italic; font-size:9pt; }
 .pv-filterpanel-search:-moz-placeholder { color:#787676; font-style:italic; font-family: 'Segoe UI', Tahoma, Arial, Helvetica, Sans-Serif; font-size:9pt; }
+.pv-filterpanel-search-autocomplete { position:absolute; z-index:10; background-color: #FFF; border:1px solid #E2E2E2; margin-right:3px; padding: 3px; }
+.pv-filterpanel-search-autocomplete span { float:left; width:100%; }
+.pv-filterpanel-search-autocomplete span:hover { cursor:pointer; background-color:#CBE4F0; }
 .pv-filterpanel-accordion-facet-sort { background-color: #DCECF4; color: #4F7192; margin-left:4px; padding: 0px 2px 0px 2px; cursor:default; }
 .pv-filterpanel-accordion-facet-sort:hover { background-color: #BDDFEE; }
 .pv-facet-facetitem { float:left; }
 .pv-facet-facetitem-label { font-size:8pt; margin-top:3px; position:absolute; left:20px; width:500px; cursor:default; }
 .pv-facet-facetitem-label:hover { background-color: #DCECF4; }
-.pv-facet-facetitem-count { margin-top:3px; color:#A8A9AA; position:absolute; right:0px; padding-right:5px; padding-left:25px; background-image: url('../Content/images/CountGradient.png'); background-position: 5px 50%; background-repeat:repeat-y;  }
-.pv-filterpanel-accordion-heading-clear { width:11px; position:absolute; top:6px; right:5px; background-image: url('../Content/images/FilterPanelClear.png'); background-position: center center; background-repeat: no-repeat; cursor:pointer; visibility:hidden; }
+.pv-facet-facetitem-count { margin-top:3px; color:#A8A9AA; position:absolute; right:0px; padding-right:5px; padding-left:25px; background-image: url('../media/CountGradient.png'); background-position: 5px 50%; background-repeat:repeat-y;  }
+.pv-filterpanel-accordion-heading-clear { width:11px; position:absolute; top:6px; right:5px; background-image: url('../media/FilterPanelClear.png'); background-position: center center; background-repeat: no-repeat; cursor:pointer; visibility:hidden; }
 .pv-filterpanel-accordion-facet-list { margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; list-style:none; }
 .pv-filterpanel-accordion-facet-list-item { clear: both; }
 .pv-viewpanel { position:absolute; }
 .pv-viewpanel-view { display:none; }
 .pv-viewpanel-unabletodisplay { margin-top:60px; margin-left:60px; }
-.pv-filterpanel-accordion { overflow-y:auto; overflow-x:hidden; }
+.pv-filterpanel-accordion { overflow-y:auto; overflow-x:hidden; margin-top:6px; }
 .pv-infopanel { position: absolute; z-index:30; width: 182px; margin-top:5px; padding: 8px 8px 8px 8px; background:#FEFEFE; border: 1px solid #C5C5C5; -moz-border-radius: 3px; border-radius: 3px; -moz-box-shadow: 0 0 2px 2px #D7D9DA; -webkit-box-shadow: 0 0 2px 2px #D7D9DA; box-shadow: 0 0 2px 2px #D7D9DA; }
 .pv-infopanel-controls { margin-bottom:7px; float :left; clear:both; }
-.pv-infopanel-controls-navleft { height: 10px; width: 10px; background-image: url('../Content/images/InfoPanelLeft.png'); float: left; cursor:pointer; }
+.pv-infopanel-controls-navleft { height: 10px; width: 10px; background-image: url('../media/InfoPanelLeft.png'); float: left; cursor:pointer; }
 .pv-infopanel-controls-navbar { height: 10px; width: 0px; border-left: 1px solid #C8CFD3; margin-left:8px; float: left; }
-.pv-infopanel-controls-navright { height: 10px; width: 10px; margin-left:8px; background-image: url('../Content/images/InfoPanelRight.png'); float: left; cursor:pointer;}
+.pv-infopanel-controls-navright { height: 10px; width: 10px; margin-left:8px; background-image: url('../media/InfoPanelRight.png'); float: left; cursor:pointer;}
 .pv-infopanel-heading { font-size: 12pt; float:left; clear:both; }
 .pv-infopanel-details { margin-top: 15px; float: left; clear:both; width:181px; overflow-y:auto; overflow-x:hidden;}
 .pv-infopanel-detail-description { margin-bottom:5px; overflow:hidden; }
